# SPHOpenCL3D

./: CMakeLists.txt  README.md  compile.txt  engine.cpp  engine.hpp  flags.h  kernels.cl  main.cpp
MC33_cpp_library/source/: MC33.cpp  MC33_LookUpTable.h  grid3d.cpp  surface.cpp
ehgl/: README.md  eg.hpp
ehgl/eg/: buffer.hpp  buffer_target.hpp  context.hpp  debug.hpp  debug_window.hpp  framebuffer.hpp  framebuffer_target.hpp  gl.hpp  loop.hpp  math.hpp  program.hpp  query.hpp  renderbuffer.hpp  renderbuffer_target.hpp  shader.hpp  sync.hpp  texture.hpp  texture_target.hpp  time.hpp  transform_feedback.hpp  uniform.hpp  util.hpp  vertex_array.hpp  vertex_attrib.hpp
rendering/: compile.txt  frag.glsl  main.cpp  tile_frag.glsl  tile_vert.glsl  vert.glsl
